# trigno_capture

./: .gitmodules  CMakeLists.txt  package.xml
launch/: trigno_capture.launch
msg/: trignoEMG.msg  trignoIMU.msg  trignoIMUEMG.msg  trignoIMUEMGHistory.msg  trignoMultiEMG.msg  trignoMultiIMU.msg
scripts/: pytrigno_node.py
